--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="https://diegoalvarado.co/diego_alvarado.png" />
+		<link rel="shortcut icon" href="diego_alvarado.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#343a40" />
 		<meta
