--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 				<a href="https://www.linkedin.com/in/alvarado/" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fa fa-address-card">&nbsp;</i>LinkedIn</a>
 				<br>
 				<a href="https://www.twitter.com/diealvarado/" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-twitter">&nbsp;</i>Twitter</a>
+				<br>
+				<a href="https://medium.com/@diegoealvarado" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-medium">&nbsp;</i>Medium</a>
 			</div>
 			<br><br>
 			<hr>
