--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<hr>
 			<br>
 			<div class="container">
-				<h3>For mentoring, coaching or any other topic, leave your information and I will contact you shortly</h3>
+				<h3>Contact Form</h3>
 				<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScV0mPFQdT51CW8bdWCKeudQ4qAR-X7lIdrrakaux7BGRYdgw/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 	  				Name:<br>
 	  				<input type="text" name="entry.1271316456" id="entry.1271316456"><br>
