--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<img src="diego_alvarado.png" class="m-3" alt="image" width="200px" height="175x">
 				<div id="infocard" class="media-body m-2">
 					<h1 id="name" class="align-items-center mt-2">Diego Alvarado</h1>
-					<p>Entrepreneur, Product Manager, Program Management, Operation Advisor, Mentor and Coach.
+					<p id="description">Entrepreneur, Product Manager, Program Management, Operation Advisor, Mentor and Coach.
 					<br>
 					Worked in the Telecom Industry. Founded 4 startups being the last one Team Coaches an innovation suite that integrates collaboration, operation, community, and portfolio management all-in-one.
 					</p>
@@ -106,7 +106,7 @@
 			<hr>
 			<br>
 			<div class="container">
-				<h2 id="contact">Contact Form</h2>
+				<h2 id="contact">I would love to hear from you and your needs</h2>
 				<form id="form" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScV0mPFQdT51CW8bdWCKeudQ4qAR-X7lIdrrakaux7BGRYdgw/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 	  				Name:<br>
 	  				<input type="text" name="entry.1271316456" id="entry.1271316456"><br>
