--- a/index.html
+++ b/index.html
@@ -59,25 +59,26 @@
 			  background-color: #333133;
 			}
 			#infocard {
-    		  	  background-color: #ff9;
-    		  	  box-shadow: 0 5px 5px 0 rgba(0,0,0,.15);
-    		  	  padding: 1rem 0;
-    		  	  transform-origin: 50% 50%;
-    		  	  margin-top: 30px;
-    		  	  margin-left: 50px;
+    		  background-color: #ff9;
+    		  <!--transform: rotate(-5deg) translateX(1rem) translateY(-1rem);-->
+    		  box-shadow: 0 5px 5px 0 rgba(0,0,0,.15);
+    		  padding: 1rem 0;
+    		  transform-origin: 50% 50%;
+    		  margin-top: 30px;
+    		  margin-left: 50px;
 			}
 			#name {
-    		  	  margin-left: 50px;
+    		  margin-left: 50px;
 			}
 			#description {
-    		  	  margin-left: 50px;
+    		  margin-left: 50px;
 			}
 			#contact {
-    		  	  font-size: 1.7em;
-    		  	  margin-bottom: 20px;
+    		  font-size: 1.7em;
+    		  margin-bottom: 20px;
 			}
 			#form {
-    		  	  font-size: 0.7em;
+    		  font-size: 0.7em;
 			}
 		</style>
 	</head>
@@ -105,8 +106,15 @@
 			<br><br>
 			<hr>
 			<br>
+			<div>
+				<h2 id="contact">Buy me a coffee or book a session with me<h2>
+				<a href="https://www.buymeacoffee.com/alvarado" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+			</div>
+			<br><br>
+			<hr>
+			<br>
 			<div class="container">
-				<h2 id="contact">I would love to hear from you and your needs</h2>
+				<h2 id="contact">Ping me with a question or comment<h2>
 				<form id="form" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScV0mPFQdT51CW8bdWCKeudQ4qAR-X7lIdrrakaux7BGRYdgw/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 	  				Name:<br>
 	  				<input type="text" name="entry.1271316456" id="entry.1271316456"><br>
