--- a/index.html
+++ b/index.html
@@ -1,149 +1,79 @@
-
 <!DOCTYPE html>
-<html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="diego_alvarado.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#343a40" />
-		<meta
-		name="description"
-		content="Entrepreneur, Product Manager, Program Management, Operation Advisor, Mentor and Coach."
-		/>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<title>Diego Alvarado</title>
-		<style>
-			body{
-			  background-color: #FFFFFF;
-			}
-			h5{
-			  color: #343a40;
-			}
-			.name{
-			  color: #343a40;
-			}
-			.love{
-			  color: #343a40 !important;
-			}
-			.footer{
-			  margin-top: 5% !important;
-			  margin-bottom: 10px;
-			}
-			@media (max-width: 479px) {
-			.footer{
-			  margin-top: 35% !important;
-			}
-			}
-			input[type=text], select, textarea {
-			  width: 100%;
-			  padding: 6px;
-			  border: 1px solid #ccc;
-			  border-radius: 4px;
-			  box-sizing: border-box;
-			  margin-top: 6px;
-			  margin-bottom: 16px;
-			  resize: vertical;
-			}
+<html lang="en" >
 
-			input[type=submit] {
-			  background-color: #171617;
-			  color: white;
-			  padding: 12px 20px;
-			  border: none;
-			  border-radius: 4px;
-			  cursor: pointer;
-			}
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>Diego Alvarado Landing Page</title>
 
-			input[type=submit]:hover {
-			  background-color: #333133;
-			}
-			#infocard {
-    		  background-color: #ff9;
-    		  <!--transform: rotate(-5deg) translateX(1rem) translateY(-1rem);-->
-    		  box-shadow: 0 5px 5px 0 rgba(0,0,0,.15);
-    		  padding: 1rem 0;
-    		  transform-origin: 50% 50%;
-    		  margin-top: 30px;
-    		  margin-left: 50px;
-			}
-			#name {
-    		  margin-left: 50px;
-			}
-			#description {
-    		  margin-left: 50px;
-			}
-			#contact {
-    		  font-size: 1.7em;
-    		  margin-bottom: 20px;
-			}
-			#form {
-    		  font-size: 0.7em;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<div class="media mt-5">
-				<img src="diego_alvarado.png" class="m-3" alt="image" width="200px" height="175x">
-				<div id="infocard" class="media-body m-2">
-					<h1 id="name" class="align-items-center mt-2">Diego Alvarado</h1>
-					<p id="description">Entrepreneur, Product Manager, Program Management, Operation Advisor, Mentor and Coach.
-					<br>
-					Worked in the Telecom Industry. Founded 4 startups being the last one Team Coaches an innovation suite that integrates collaboration, operation, community, and portfolio management all-in-one.
-					</p>
-				</div>
-			</div>
-			<div class="mt-4">
-				<a href="https://teamcoach.es" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fa fa-code">&nbsp;</i>Team Coaches: innovation suite</a>
-				<br>
-				<a href="https://www.linkedin.com/in/alvarado/" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fa fa-address-card">&nbsp;</i>LinkedIn</a>
-				<br>
-				<a href="https://www.twitter.com/diealvarado/" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-twitter">&nbsp;</i>Twitter</a>
-				<br>
-				<a href="https://medium.com/@diegoealvarado" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-medium">&nbsp;</i>Medium</a>
-			</div>
-			<br><br>
-			<hr>
-			<br>
-			<div>
-				<h2 id="contact">Buy me a coffee or book a session with me<h2>
-				<a href="https://www.buymeacoffee.com/alvarado" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
-			</div>
-			<br><br>
-			<hr>
-			<br>
-			<div class="container">
-				<h2 id="contact">Ping me with a question or comment<h2>
-				<form id="form" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScV0mPFQdT51CW8bdWCKeudQ4qAR-X7lIdrrakaux7BGRYdgw/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
-	  				Name:<br>
-	  				<input type="text" name="entry.1271316456" id="entry.1271316456"><br>
-	  				Email:<br>
-	  				<input type="text" name="entry.1436583689" id="entry.1436583689"><br>
-	  				Description:<br>
-	  				<input type="text" name="entry.1896389353" id="entry.1896389353">
-	  				<input type="submit" value="Submit">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="shortcut icon" href="assets/diego_alvarado.png" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
 
-	  				<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
-	  				<script src="assets/js/jquery.min.js"></script>
-					<script type="text/javascript">var submitted=false;</script>
-					<script type="text/javascript">
-						$('#gform').on('submit', function(e) {
-	  					$('#gform *').fadeOut(2000);
-	  					$('#gform').prepend('Your submission has been processed...');
-	  					});
-					</script>
-				</form>
-			</div>
+<body>
+        <!-- diegoalvarado.co Version 0.2 | Production Version -->
+    <div class="header">
+    <div class="col-xs-12">
+            <div class="text-center" style="padding-top: 20px; padding-bottom: 20px;">
+                <!--<img class="backdrop linktree">-->
+                <img class="user" src="assets/diego_alvarado.png" class="m-3" alt="image">
+                <h2 style="color: #0D0C22; padding-top: 20px;">
+                    Diego Alvarado
+                    <svg style="margin-bottom: -2px" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0L9.99182 1.3121L12.3696 1.29622L13.3431 3.48797L15.3519 4.77336L14.9979 7.14888L16 9.32743L14.431 11.1325L14.1082 13.5126L11.8223 14.1741L10.277 16L8 15.308L5.72296 16L4.17772 14.1741L1.89183 13.5126L1.569 11.1325L0 9.32743L1.00206 7.14888L0.648112 4.77336L2.65693 3.48797L3.6304 1.29622L6.00818 1.3121L8 0Z" fill="#0095F6"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.4036 5.20536L7.18853 8.61884L6.12875 7.49364C5.8814 7.23102 5.46798 7.21864 5.20536 7.466C4.94274 7.71335 4.93036 8.12677 5.17771 8.38939L6.71301 10.0195C6.9709 10.2933 7.40616 10.2933 7.66405 10.0195L11.3546 6.10111C11.6019 5.83848 11.5896 5.42507 11.3269 5.17771C11.0643 4.93036 10.6509 4.94274 10.4036 5.20536Z" fill="white"></path>
+                    </svg>
+                </h2>
+                <p id="description">🇺🇸 🚀Helping companies to reach success with process improvement, team building, coaching and innovation through technology and experience.🔥
+                </p>
+                <br>
+                <p id="description">🇦🇷 🚀Ayudando a startups a su exito con mejoras en procesos, construcción de equipos, coaching e innovación a través de tecnologia.🔥
+                </p>
+            </div>
+            <div class="channels" style="padding-bottom: 20px;">
+                <svg class="icon" aria-label="Twitter" viewBox="328 355 335 276" width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-left: 30px;">
+                    <a href="https://twitter.com/diealvarado">
+                    <path fill="#828282" d="
+                        M 630, 425 A 195, 195 0 0 1 331, 600 A 142, 142 0 0 0 428, 570 A  70,  70 0 0 1 370, 523 A  70,  70 0 0 0 401, 521 A  70,  70 0 0 1 344, 455 A  70,  70 0 0 0 372, 460 A  70,  70 0 0 1 354, 370 A 195, 195 0 0 0 495, 442 A  67,  67 0 0 1 611, 380 A 117, 117 0 0 0 654, 363 A  65,  65 0 0 1 623, 401 A 117, 117 0 0 0 662, 390 A  65,  65 0 0 1 630, 425 Z"
+                        />
+                </svg>
+                <svg class="icon" aria-label="LinkedIn" viewBox="0 50 512 512" width="25" height="25" viewBox="0 0 16 16" fill="none">
+                    <a href="https://linkedin.com/in/alvarado" target="_blank" rel="nofollow noopener">
+                    <path fill="#828282" d="M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683c-27.765,0-50.273-22.691-50.273-50.683 C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333z M279.195,187.333h-81.541V462h81.541c0,0,0-101.877,0-144.181c0-38.624,17.779-61.615,51.807-61.615 c31.268,0,46.289,22.071,46.289,61.615c0,39.545,0,144.181,0,144.181h84.605c0,0,0-100.344,0-173.915 s-41.689-109.131-99.934-109.131s-82.768,45.369-82.768,45.369V187.333z"/>
+                </svg>
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-label="Medium" role="img" viewBox="0 0 512 512" idth="25" height="25" viewBox="0 0 16 16" fill="none">
+                    <a href="https://medium.com/@diegoealvarado">
+                    <rect width="512" height="512" rx="15%" fill="#828282"/>
+                    <path fill="white" d="M125 173c0-4-2-9-5-11l-31-38v-6h98l75 166 67-166h93v6l-27 26c-2 1-3 4-3 7v190c0 3 1 6 3 8l27 25v6H289v-6l27-26c3-3 3-4 3-8V193l-76 192h-10l-88-192v129c-1 5 1 11 5 15l35 43v5H85v-5l35-43c4-4 6-10 5-15z"/>
+                </svg>
+            </div>
+    </div>
+    </div>
 
-		<!--------------------Footer---------------------------->
-		<div class="footer mt-5">
-		<hr/>
-		<h6>
-		Created by 
-		<a href="https://teamcoach.es" class="name" target="_blank"> Team Coaches </a>
-		</h6>
-		</div>
-		</div>
-	</body>
+
+
+    <div class="container">
+    <div class="col-xs-12" style="padding-top: 30px;">
+            <div class="text-center">
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='http://teamcoach.es'" type="button" class="btn btn-outline-dark shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Team Coaches Innovation Platform</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Entrepreneur? - Schedule a call</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">My blog</button>
+                </div>
+            </div>
+    </div>
+    </div>
+
+        <div class="text-center">
+            <a href="https://www.diegoalvarado.co" style="color: #34312f;">powered by Diego Alvarado</a>
+        </div>
+
+</body>
+
 </html>
