--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Entrepreneur? - Schedule a call</button>
                 </div>
                 <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='https://techenamerica.com'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Tech en America</button>
+                </div>
+                <div style="padding-bottom: 30px;">
                     <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">My blog</button>
                 </div>
             </div>
