--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10.4036 5.20536L7.18853 8.61884L6.12875 7.49364C5.8814 7.23102 5.46798 7.21864 5.20536 7.466C4.94274 7.71335 4.93036 8.12677 5.17771 8.38939L6.71301 10.0195C6.9709 10.2933 7.40616 10.2933 7.66405 10.0195L11.3546 6.10111C11.6019 5.83848 11.5896 5.42507 11.3269 5.17771C11.0643 4.93036 10.6509 4.94274 10.4036 5.20536Z" fill="white"></path>
                     </svg>
                 </h2>
-                <p id="description">🇺🇸 🚀Helping companies to reach success with process improvement, team building, coaching and innovation through technology and experience.🔥
+                <p id="description">🇺🇸 🚀Helping companies achieve a scalable growth in revenue applying delivery excellence, process improvement, team building, mentoring, coaching, and innovation through technology.🔥
                 </p>
                 <br>
-                <p id="description">🇦🇷 🚀Ayudando a startups a su exito con mejoras en procesos, construcción de equipos, coaching e innovación a través de tecnologia.🔥
+                <p id="description">🇦🇷 🚀Ayudando a empresas alcanzar a crecimiento escalable aplicando mejoras en excelencia en implementacion, procesos, construcción de equipos, mentoring, coaching e innovación a través de tecnologia.🔥
                 </p>
             </div>
             <div class="channels" style="padding-bottom: 20px;">
@@ -58,16 +58,16 @@
     <div class="col-xs-12" style="padding-top: 30px;">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='http://teamcoach.es'" type="button" class="btn btn-outline-dark shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Team Coaches Innovation Platform</button>
-                </div>
-                <div style="padding-bottom: 30px;">
                     <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Entrepreneur? - Schedule a call</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://techenamerica.com'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Tech en America</button>
+                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Personal Finance Problems? - Schedule a call</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">My blog</button>
+                    <button onclick="location.href='https://medium.com/@diegoealvarado'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">My blog</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='http://teamcoach.es'" type="button" class="btn btn-outline-dark shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Team Coaches Innovation Platform</button>
                 </div>
             </div>
     </div>
