--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
         <!-- diegoalvarado.co Version 0.2 | Production Version -->
+    <div class="topnav">
+        <a class="active" href="https://diegoalvarado.co">Home</a>
+        <a href="https://diegoalvarado.co/pages/books">Books</a>
+    </div>    
     <div class="header">
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 20px; padding-bottom: 20px;">
@@ -48,26 +52,32 @@
                     <rect width="512" height="512" rx="15%" fill="#828282"/>
                     <path fill="white" d="M125 173c0-4-2-9-5-11l-31-38v-6h98l75 166 67-166h93v6l-27 26c-2 1-3 4-3 7v190c0 3 1 6 3 8l27 25v6H289v-6l27-26c3-3 3-4 3-8V193l-76 192h-10l-88-192v129c-1 5 1 11 5 15l35 43v5H85v-5l35-43c4-4 6-10 5-15z"/>
                 </svg>
+                <svg viewBox="0 0 60 60" width="24px" height="24px" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://mentorcruise.com/mentor/DiegoAlvarado/" target="_blank">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0 30C0 24.0666 1.75945 18.2664 5.0559 13.3329C8.35234 8.39941 13.0377 4.55425 18.5195 2.28362C24.0013 0.0129938 30.0333 -0.5811 35.8527 0.576457C41.6721 1.73401 47.0176 4.59123 51.2132 8.7868C55.4088 12.9824 58.266 18.3279 59.4235 24.1473C60.5811 29.9667 59.987 35.9987 57.7164 41.4805C55.4457 46.9623 51.6006 51.6476 46.6671 54.9441C41.7336 58.2405 35.9334 60 30 60C26.0603 60 22.1592 59.224 18.5195 57.7164C14.8797 56.2088 11.5725 53.999 8.78675 51.2132C6.00099 48.4275 3.79123 45.1203 2.2836 41.4805C0.775959 37.8407 -7.62939e-06 33.9397 0 30ZM23.6848 18.7418L17.3698 29.6797H29.0331V9.4784L23.6848 18.7418ZM30.9668 9.47817V29.6797H42.63L36.315 18.7418L30.9668 9.47817ZM52.1444 31.6134H7.85548L12.0545 38.886H47.9455L52.1444 31.6134ZM46.8291 40.8198H13.1708L17.3698 48.0927H42.63L46.8291 40.8198Z" fill="#828282"></path>
+                </svg>
             </div>
     </div>
     </div>
 
+
+        
 
 
     <div class="container">
     <div class="col-xs-12" style="padding-top: 30px;">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Entrepreneur? - Schedule a call</button>
+                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 50%; padding-top:10px; padding-bottom:10px; font-weight: 600;  white-space: normal; word-wrap: break-word;">Entrepreneur? - Free Consulting call</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Personal Finance Problems? - Schedule a call</button>
+                    <button onclick="location.href='https://calendly.com/dalvarado/25min'" type="button" class="btn btn-outline-dark" style="width: 50%; padding-top:10px; padding-bottom:10px; font-weight: 600;  white-space: normal; word-wrap: break-word;">Personal Finance Problems? - Schedule a call</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://medium.com/@diegoealvarado'" type="button" class="btn btn-outline-dark" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">My blog</button>
+                    <button onclick="location.href='https://mentorcruise.com/mentor/DiegoAlvarado/'" type="button" class="btn btn-outline-dark" style="width: 50%; padding-top:10px; padding-bottom:10px; font-weight: 600;  white-space: normal; word-wrap: break-word;">Mentoring Profile and sessions</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='http://teamcoach.es'" type="button" class="btn btn-outline-dark shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Team Coaches Innovation Platform</button>
+                    <button onclick="location.href='http://teamcoach.es'" type="button" class="btn btn-outline-dark shake" style="width: 50%; padding-top:10px; padding-bottom:10px; font-weight: 600;  white-space: normal; word-wrap: break-word;">Team Coaches Innovation Platform</button>
                 </div>
             </div>
     </div>
