--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
             <div class="cards-wrapper">
                 
-                <a href="https://monumentrealtytx.com/diego-alvarado/" class="card agent-card">
+                <a href="https://alvaradorealtygroup.com" class="card agent-card">
                   <!--  <div class="icon">🏠</div> -->
                   <img src="images/Alvarado Realty Group.png" alt="Alvarado Realty Group" class="card-logo" style="max-width: 150px; height: auto;">
                     <h3>Buy or Sell a Home</h3>
@@ -84,7 +84,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Diego Alvarado. All Rights Reserved.</p>
+            <p>&copy; 2026 Diego Alvarado. All Rights Reserved.</p>
             <div class="footer-links">
                 <a href="https://www.alvaradorealtygroup.com">Alvarado Realty Group</a> | 
                 <a href="https://alvacom.co">Alvacom LLC</a>
