--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 
                 <a href="https://alvaradorealtygroup.com" class="card agent-card">
                   <!--  <div class="icon">🏠</div> -->
-                  <img src="images/Alvarado Realty Group.png" alt="Alvarado Realty Group" class="card-logo" style="max-width: 150px; height: auto;">
+                  <img src="images/alvarado-logo.png" alt="Alvarado Realty Group" class="card-logo" style="max-width: 150px; height: auto;">
                     <h3>Buy or Sell a Home</h3>
                     <p>Trust <strong>Alvarado Realty Group</strong> for luxury service and expert market advice in Flower Mound and DFW.</p>
                     <span class="btn">Visit Realty Site &rarr;</span>
@@ -47,7 +47,7 @@
 
                 <a href="https://alvacom.co" class="card investor-card">
                    <!-- <div class="icon">🔨</div> -->
-                    <img src="images/Alvacom logo.png" alt="Alvacom" class="card-logo" style="max-width: 150px; height: auto;">
+                    <img src="images/alvacom-logo.png" alt="Alvacom" class="card-logo" style="max-width: 150px; height: auto;">
                     <h3>Investments & Rentals</h3>
                     <p>Explore <strong>Alvacom</strong> for fix-and-flip opportunities, construction projects, and tenant services.</p>
                     <span class="btn">Visit Alvacom &rarr;</span>
